03-FlexYBison/pruebaBison.output
Gramática

    0 $accept: objetivo $end

    1 objetivo: programa FDT

    2 programa: INICIO FIN
    3         | INICIO listaSentencias FIN

    4 listaSentencias: sentencia
    5                | listaSentencias sentencia

    6 $@1: /* vacío */

    7 sentencia: ID $@1 ASIGNACION expresion PYCOMA
    8          | LEER PARENIZQUIERDO listaIdentificadores PARENDERECHO PYCOMA
    9          | ESCRIBIR PARENIZQUIERDO listaExpresiones PARENDERECHO PYCOMA

   10 listaIdentificadores: expresion
   11                     | listaIdentificadores COMA ID

   12 listaExpresiones: expresion
   13                 | listaExpresiones COMA expresion

   14 expresion: primaria
   15          | expresion SUMA primaria
   16          | expresion RESTA primaria

   17 primaria: ID
   18         | CONSTANTE
   19         | PARENIZQUIERDO expresion PARENDERECHO


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
ASIGNACION (258) 7
PYCOMA (259) 7 8 9
SUMA (260) 15
RESTA (261) 16
PARENIZQUIERDO (262) 8 9 19
PARENDERECHO (263) 8 9 19
COMA (264) 11 13
ESCRIBIR (265) 9
LEER (266) 8
INICIO (267) 2 3
FIN (268) 2 3
FDT (269) 1
CONSTANTE (270) 18
ID (271) 7 11 17


No terminales con las reglas donde aparecen

$accept (17)
    en la izquierda: 0
objetivo (18)
    en la izquierda: 1, en la derecha: 0
programa (19)
    en la izquierda: 2 3, en la derecha: 1
listaSentencias (20)
    en la izquierda: 4 5, en la derecha: 3 5
sentencia (21)
    en la izquierda: 7 8 9, en la derecha: 4 5
$@1 (22)
    en la izquierda: 6, en la derecha: 7
listaIdentificadores (23)
    en la izquierda: 10 11, en la derecha: 8 11
listaExpresiones (24)
    en la izquierda: 12 13, en la derecha: 9 13
expresion (25)
    en la izquierda: 14 15 16, en la derecha: 7 10 12 13 15 16 19
primaria (26)
    en la izquierda: 17 18 19, en la derecha: 14 15 16


estado 0

    0 $accept: . objetivo $end

    INICIO  desplazar e ir al estado 1

    objetivo  ir al estado 2
    programa  ir al estado 3


estado 1

    2 programa: INICIO . FIN
    3         | INICIO . listaSentencias FIN

    ESCRIBIR  desplazar e ir al estado 4
    LEER      desplazar e ir al estado 5
    FIN       desplazar e ir al estado 6
    ID        desplazar e ir al estado 7

    listaSentencias  ir al estado 8
    sentencia        ir al estado 9


estado 2

    0 $accept: objetivo . $end

    $end  desplazar e ir al estado 10


estado 3

    1 objetivo: programa . FDT

    FDT  desplazar e ir al estado 11


estado 4

    9 sentencia: ESCRIBIR . PARENIZQUIERDO listaExpresiones PARENDERECHO PYCOMA

    PARENIZQUIERDO  desplazar e ir al estado 12


estado 5

    8 sentencia: LEER . PARENIZQUIERDO listaIdentificadores PARENDERECHO PYCOMA

    PARENIZQUIERDO  desplazar e ir al estado 13


estado 6

    2 programa: INICIO FIN .

    $default  reduce usando la regla 2 (programa)


estado 7

    7 sentencia: ID . $@1 ASIGNACION expresion PYCOMA

    $default  reduce usando la regla 6 ($@1)

    $@1  ir al estado 14


estado 8

    3 programa: INICIO listaSentencias . FIN
    5 listaSentencias: listaSentencias . sentencia

    ESCRIBIR  desplazar e ir al estado 4
    LEER      desplazar e ir al estado 5
    FIN       desplazar e ir al estado 15
    ID        desplazar e ir al estado 7

    sentencia  ir al estado 16


estado 9

    4 listaSentencias: sentencia .

    $default  reduce usando la regla 4 (listaSentencias)


estado 10

    0 $accept: objetivo $end .

    $default  aceptar


estado 11

    1 objetivo: programa FDT .

    $default  reduce usando la regla 1 (objetivo)


estado 12

    9 sentencia: ESCRIBIR PARENIZQUIERDO . listaExpresiones PARENDERECHO PYCOMA

    PARENIZQUIERDO  desplazar e ir al estado 17
    CONSTANTE       desplazar e ir al estado 18
    ID              desplazar e ir al estado 19

    listaExpresiones  ir al estado 20
    expresion         ir al estado 21
    primaria          ir al estado 22


estado 13

    8 sentencia: LEER PARENIZQUIERDO . listaIdentificadores PARENDERECHO PYCOMA

    PARENIZQUIERDO  desplazar e ir al estado 17
    CONSTANTE       desplazar e ir al estado 18
    ID              desplazar e ir al estado 19

    listaIdentificadores  ir al estado 23
    expresion             ir al estado 24
    primaria              ir al estado 22


estado 14

    7 sentencia: ID $@1 . ASIGNACION expresion PYCOMA

    ASIGNACION  desplazar e ir al estado 25


estado 15

    3 programa: INICIO listaSentencias FIN .

    $default  reduce usando la regla 3 (programa)


estado 16

    5 listaSentencias: listaSentencias sentencia .

    $default  reduce usando la regla 5 (listaSentencias)


estado 17

   19 primaria: PARENIZQUIERDO . expresion PARENDERECHO

    PARENIZQUIERDO  desplazar e ir al estado 17
    CONSTANTE       desplazar e ir al estado 18
    ID              desplazar e ir al estado 19

    expresion  ir al estado 26
    primaria   ir al estado 22


estado 18

   18 primaria: CONSTANTE .

    $default  reduce usando la regla 18 (primaria)


estado 19

   17 primaria: ID .

    $default  reduce usando la regla 17 (primaria)


estado 20

    9 sentencia: ESCRIBIR PARENIZQUIERDO listaExpresiones . PARENDERECHO PYCOMA
   13 listaExpresiones: listaExpresiones . COMA expresion

    PARENDERECHO  desplazar e ir al estado 27
    COMA          desplazar e ir al estado 28


estado 21

   12 listaExpresiones: expresion .
   15 expresion: expresion . SUMA primaria
   16          | expresion . RESTA primaria

    SUMA   desplazar e ir al estado 29
    RESTA  desplazar e ir al estado 30

    $default  reduce usando la regla 12 (listaExpresiones)


estado 22

   14 expresion: primaria .

    $default  reduce usando la regla 14 (expresion)


estado 23

    8 sentencia: LEER PARENIZQUIERDO listaIdentificadores . PARENDERECHO PYCOMA
   11 listaIdentificadores: listaIdentificadores . COMA ID

    PARENDERECHO  desplazar e ir al estado 31
    COMA          desplazar e ir al estado 32


estado 24

   10 listaIdentificadores: expresion .
   15 expresion: expresion . SUMA primaria
   16          | expresion . RESTA primaria

    SUMA   desplazar e ir al estado 29
    RESTA  desplazar e ir al estado 30

    $default  reduce usando la regla 10 (listaIdentificadores)


estado 25

    7 sentencia: ID $@1 ASIGNACION . expresion PYCOMA

    PARENIZQUIERDO  desplazar e ir al estado 17
    CONSTANTE       desplazar e ir al estado 18
    ID              desplazar e ir al estado 19

    expresion  ir al estado 33
    primaria   ir al estado 22


estado 26

   15 expresion: expresion . SUMA primaria
   16          | expresion . RESTA primaria
   19 primaria: PARENIZQUIERDO expresion . PARENDERECHO

    SUMA          desplazar e ir al estado 29
    RESTA         desplazar e ir al estado 30
    PARENDERECHO  desplazar e ir al estado 34


estado 27

    9 sentencia: ESCRIBIR PARENIZQUIERDO listaExpresiones PARENDERECHO . PYCOMA

    PYCOMA  desplazar e ir al estado 35


estado 28

   13 listaExpresiones: listaExpresiones COMA . expresion

    PARENIZQUIERDO  desplazar e ir al estado 17
    CONSTANTE       desplazar e ir al estado 18
    ID              desplazar e ir al estado 19

    expresion  ir al estado 36
    primaria   ir al estado 22


estado 29

   15 expresion: expresion SUMA . primaria

    PARENIZQUIERDO  desplazar e ir al estado 17
    CONSTANTE       desplazar e ir al estado 18
    ID              desplazar e ir al estado 19

    primaria  ir al estado 37


estado 30

   16 expresion: expresion RESTA . primaria

    PARENIZQUIERDO  desplazar e ir al estado 17
    CONSTANTE       desplazar e ir al estado 18
    ID              desplazar e ir al estado 19

    primaria  ir al estado 38


estado 31

    8 sentencia: LEER PARENIZQUIERDO listaIdentificadores PARENDERECHO . PYCOMA

    PYCOMA  desplazar e ir al estado 39


estado 32

   11 listaIdentificadores: listaIdentificadores COMA . ID

    ID  desplazar e ir al estado 40


estado 33

    7 sentencia: ID $@1 ASIGNACION expresion . PYCOMA
   15 expresion: expresion . SUMA primaria
   16          | expresion . RESTA primaria

    PYCOMA  desplazar e ir al estado 41
    SUMA    desplazar e ir al estado 29
    RESTA   desplazar e ir al estado 30


estado 34

   19 primaria: PARENIZQUIERDO expresion PARENDERECHO .

    $default  reduce usando la regla 19 (primaria)


estado 35

    9 sentencia: ESCRIBIR PARENIZQUIERDO listaExpresiones PARENDERECHO PYCOMA .

    $default  reduce usando la regla 9 (sentencia)


estado 36

   13 listaExpresiones: listaExpresiones COMA expresion .
   15 expresion: expresion . SUMA primaria
   16          | expresion . RESTA primaria

    SUMA   desplazar e ir al estado 29
    RESTA  desplazar e ir al estado 30

    $default  reduce usando la regla 13 (listaExpresiones)


estado 37

   15 expresion: expresion SUMA primaria .

    $default  reduce usando la regla 15 (expresion)


estado 38

   16 expresion: expresion RESTA primaria .

    $default  reduce usando la regla 16 (expresion)


estado 39

    8 sentencia: LEER PARENIZQUIERDO listaIdentificadores PARENDERECHO PYCOMA .

    $default  reduce usando la regla 8 (sentencia)


estado 40

   11 listaIdentificadores: listaIdentificadores COMA ID .

    $default  reduce usando la regla 11 (listaIdentificadores)


estado 41

    7 sentencia: ID $@1 ASIGNACION expresion PYCOMA .

    $default  reduce usando la regla 7 (sentencia)
